--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>Love drinking coffee as much as i do? 
             Let's talk about how great it is!
              We can code while we drink coffee!</p>
-             <div class="button"><a class="btn" href="bazdej@gmail.com">CONTACT ME</a></div>
+                 <div class="button"><a class="btn" href="https://protected-cliffs-18948.herokuapp.com/">SingUp to my newsletter</a></div>
     </div>
 
     <div class="bottom-container">
